--- a/includes/style.css
+++ b/includes/style.css
@@ -5660,8 +5660,12 @@ table.navtabs {
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
 /* close commented backslash hack */
-.newLoanWidth {width: 75%;margin:0;padding-bottom: 3em;}
-.nextnum {width: 20%;border: 1px solid green; display: inline-block;}
+ .editLoanbox {width: 80em; margin: 0 auto;}
+ .newLoanWidth {width: 68em;margin:0 auto;padding-bottom: 3em;}
+.nextnum {width: 34%;border: 1px solid green; display: inline-block;float:right;position:relative;margin-top:-580px;margin-right:0;}
+.nextnum p {margin: 20px 10px;}
+.nextnum span {padding: 0 30px;display: block;}
+ .newLoanWidth table {margin-top:.5em;}
 
 
 
