--- a/includes/style.css
+++ b/includes/style.css
@@ -4892,7 +4892,7 @@ header .download a:hover {
 	width: 80%;
 	float: left;
 	padding: 5px 0 0 0;
-	margin: 0 0 2px 0;
+	margin: 0 auto;
 	font-size: .85em;
 }
 #listloans dt {
