--- a/includes/style.css
+++ b/includes/style.css
@@ -1098,10 +1098,10 @@ input.lnkBtn {
 	border: 1px solid #336666;
 	padding: 1px 2px;
 }
-.controlButton:hover, input.qutBtn:hover, input.delBtn:hover, input.picBtn:hover, input.clrBtn:hover, input.lnkBtn:hover, input.schBtn:hover, input.insBtn:hover, input.savBtn:hover {
+/*.controlButton:hover, input.qutBtn:hover, input.delBtn:hover, input.picBtn:hover, input.clrBtn:hover, input.lnkBtn:hover, input.schBtn:hover, input.insBtn:hover, input.savBtn:hover {
 	border-color: #FF6633;
 	cursor: pointer;
-}
+}*/
 input.schBtn {
 	color: #666666;
 	font-size: 10pt;
@@ -1125,7 +1125,7 @@ input.insBtn {
 	background-color: #99CCCC;
 	border: 1px solid #336666;
 }
-input.picBtn {
+/*input.picBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
@@ -1133,7 +1133,8 @@ input.picBtn {
 	background-color: #CCCC99;
 	border-color: #336666;
 	border: 1px solid;
-}
+	border-radius: 5px;
+}*/
 input.delBtn {
 	color: #666666;
 	font-size: 10pt;
@@ -2897,7 +2898,7 @@ input.insBtn {
 	border: 1px solid #336666;
 	border-radius: 5px;
 }
-input.picBtn {
+/*input.picBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
@@ -2905,7 +2906,8 @@ input.picBtn {
 	background-color: #CCCC99;
 	border-color: #336666;
 	border: 1px solid;
-}
+	border-radius:5px;
+}*/
 input.delBtn {
 	color: #666666;
 	font-size: 10pt;
@@ -4448,6 +4450,7 @@ input.picBtn {
 	background-color: #CCCC99;
 	border-color: #336666;
 	border: 1px solid;
+	border-radius: 5px;
 }
 input.delBtn {
 	color: #666666;
