--- a/includes/style.css
+++ b/includes/style.css
@@ -3440,6 +3440,8 @@ div.topBlock {
 	border: 1px solid #ed6a5a;
 	position: relative;
 	margin: 1.5em;
+	padding: 1em;
+	min-height: 40px;
 	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
 }
 .feedAtom a {
@@ -3478,7 +3480,7 @@ div.updatedAtom p {
 .authorAtom {
 	position: absolute;
 	margin-left: 10px;
-	margin-top: 35px;
+	margin-top: 28px;
 	z-index: 1000;
 	font-size: 13px;
 	color: #666;
