--- a/includes/style.css
+++ b/includes/style.css
@@ -3094,12 +3094,12 @@ tr.evenRow, td.evenRow {
 tr.oddRow, td.oddRow {
 	background-color: #F5F5F5;
 }
-/*tr.typeRow, td.typeRow {
+tr.typeRow, td.typeRow {
 	background-color: #ffe1e1;
 }
 tr.secTypeRow, td.secTypeRow {
 	background-color: #e1edff;
-}*/
+}
 
 .newRec {
 	background-color: #D6F5F2;
@@ -3147,9 +3147,9 @@ input.lnkBtn {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #99CCFF;
-	border-color: #336666;
-	border: 1px solid;
+	border: 1px solid #336666;
 	padding: 2px 4px;
+	border-radius: 5px;
 }
 input.schBtn {
 	color: #666666;
@@ -3160,8 +3160,6 @@ input.schBtn {
 	border-color: #336666;
 	border: 1px solid;
 	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
 }
 input.clrBtn {
 	color: #666666;
@@ -3177,6 +3175,7 @@ input.insBtn {
 	font-weight: bold;
 	background-color: #99CCCC;
 	border: 1px solid #336666;
+	border-radius: 5px;
 }
 input.insBtn:hover {
 	border-top-color: #FF6633;
