--- a/includes/style.css
+++ b/includes/style.css
@@ -3148,7 +3148,6 @@ input.lnkBtn {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #99CCFF;
 	border: 1px solid #336666;
-	padding: 2px 4px;
 	border-radius: 5px;
 }
 input.schBtn {
@@ -3157,8 +3156,7 @@ input.schBtn {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #CCCC99;
-	border-color: #336666;
-	border: 1px solid;
+	border: 1px solid #336666;
 	border-radius: 5px;
 }
 input.clrBtn {
