--- a/includes/style.css
+++ b/includes/style.css
@@ -3079,7 +3079,7 @@ input.lnkBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
+	padding: 2px 5px;
 	background-color: #99CCFF;
 	border: 1px solid #336666;
 	border-radius: 5px;
