--- a/includes/style.css
+++ b/includes/style.css
@@ -1,5 +1,7 @@
 /* TAG style */
-html {font-family: Arial, Helvetica, sans-serif;}
+html {
+	font-family: Arial, Helvetica, sans-serif;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #FFFFFF;
@@ -66,12 +68,10 @@ td#SDCellLeft {
 	font-size: 1em;
 }
 .headerInstitutionText {
-	
 	color: #000066;
 	font-weight: bold;
 }
 .headerCollectionText {
-	
 	font-size: 24px;
 }
 .specResultPartCell {
@@ -225,8 +225,6 @@ table.newRec {
 	padding: 0;
 	border-spacing: 0;
 }
-
-
 input.insBtn {
 	color: #666666;
 	font-weight: bold;
@@ -389,8 +387,7 @@ a:focus > .sf-sub-indicator, a:hover > .sf-sub-indicator, a:active > .sf-sub-ind
 /*** shadows for all but IE6 ***/
 .sf-shadow ul {
 	background: url('/images/css/shadow.png') no-repeat bottom right;
-	padding: 0 8px 9px 0;
-	/*-moz-border-radius-bottomleft: 17px;
+	padding: 0 8px 9px 0;/*-moz-border-radius-bottomleft: 17px;
 	-moz-border-radius-topright: 17px;
 	-webkit-border-top-right-radius: 17px;
 	-webkit-border-bottom-left-radius: 17px;*/
@@ -864,7 +861,6 @@ div.ui-datepicker {
 	width: 700px;
 	margin-bottom: 3em;
 }
-
 /*end bug form styles*/
 /****************** delete before this ? *************/
 /*************************************************/
@@ -939,7 +935,6 @@ p {
 	width: 30px;
 	z-index: 10999;
 }
-
 .borderBox {
 	display: inline-block;
 	margin: 1em 1em 1em 1em;
@@ -1313,7 +1308,6 @@ label.badPickLbl {
 	padding-left: 5px;
 	color: #2B547E;
 	font-size: small;
-	
 	display: block;
 }
 .mediaLink:hover {
@@ -1374,7 +1368,6 @@ label.badPickLbl {
 	cursor: pointer;
 	color: #2B547E;
 	font-size: .65em;
-	
 }
 .secControl:hover {
 	color: #FF0000;
@@ -1432,8 +1425,6 @@ div.code {
 	font-size: smaller;
 	color: #2F4F4F;
 }
-
-
 .browseLink {
 	cursor: pointer;
 	color: blue;
@@ -1460,7 +1451,6 @@ div.code {
 	font-weight: bold;
 	padding: 15px;
 }
-
 a.info {
 	position: relative; /*this is the key*/
 	z-index: 24;
@@ -1526,14 +1516,12 @@ div.group {
 	padding: 5px;
 	border: 3px solid #EFEFEF;
 }
-
 .redButton {
 	background-color: red;
 }
 .removeRed {
 	border: 1px solid red;
 }
-
 body {
 	font-family: arial, sans-serif;
 	background-color: #FFFFFF;
@@ -1580,7 +1568,6 @@ input.savBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #FBD29B;
 	border: 1px solid #336666;
 	border-radius: 5px;
@@ -1589,7 +1576,6 @@ input.savBtn {
 	border-color: #FF6633;
 	cursor: pointer;
 }
-
 input.insBtn {
 	color: #666666;
 	font-weight: bold;
@@ -1601,7 +1587,6 @@ input.picBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #CCCC99;
 	border-color: #336666;
 	border: 1px solid;
@@ -1611,7 +1596,6 @@ input.qutBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #FFFF00;
 	border-color: #336666;
 	border: 1px solid;
@@ -1632,7 +1616,6 @@ input.seleClr, select.seleClr, textarea.seleClr {
 input.readClr, select.readClr {
 	background-color: #CCCCCC;
 }
-
 .external:after {
 	text-decoration: none !important;
 	content: url(/images/linkOut.gif);
@@ -2329,7 +2312,6 @@ div.subnote {
 	text-decoration: underline;
 	color: black;
 }
-
 select {
 	border-radius: 3px;
 	border: 1px solid #ccc;
@@ -2621,7 +2603,7 @@ table.specResultTab {
 table.specResultTab th {
 	padding: 0px 1px 0px 1px;
 	border: 1px solid gray;
-    color: white;
+	color: white;
 	-moz-border-radius: 0px;
 	font-weight: 600;
 	background: #2176cc;
@@ -2662,7 +2644,6 @@ span.helpDiv {
 	cursor: pointer;
 	color: #2B547E;
 	font-size: .7em;
-	
 }
 .infoLink:hover {
 	color: #FF0000;
@@ -2718,7 +2699,6 @@ span.helpDiv {
 	margin: 0;
 	font-weight: bolder;
 	font-size: small;
-	
 }
 #navbar span, span.active {
 	color: green;
@@ -2729,7 +2709,6 @@ span.helpDiv {
 	margin: 0px;
 	font-weight: bolder;
 	font-size: small;
-	
 }
 #navbar a.active {
 	background-color: #000000;
@@ -2858,7 +2837,6 @@ table.sortable span.sortarrow {
 	text-decoration: none;
 }
 body.helpPages {
-	
 	background-color: #FFFF99;
 	margin: 10px;
 }
@@ -2866,7 +2844,6 @@ input.hBtn {
 	color: #666666;
 	font-size: 8pt;
 	font-weight: bold;
-	
 	background-color: #CCCC99;
 	border-color: #336666;
 	border: 1px solid;
@@ -2938,7 +2915,6 @@ div.group {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: 500;
-	
 	background-color: #add6ff;
 	border: 1px solid #336666;
 	padding: 2px 3px;
@@ -2950,7 +2926,6 @@ div.group {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #99CCFF;
 	border-color: #336666;
 	border: 1px solid;
@@ -2961,7 +2936,6 @@ div.isAButton {
 	color: black;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #F5F5F5;
 	border-color: #336666;
 	border: 1px solid;
@@ -2974,7 +2948,6 @@ div.HalfAButton {
 	color: black;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #F5F5F5;
 	border-color: #336666;
 	border: 1px solid;
@@ -3034,7 +3007,6 @@ tr.typeRow, td.typeRow {
 tr.secTypeRow, td.secTypeRow {
 	background-color: #e1edff;
 }
-
 .newRec {
 	background-color: #D6F5F2;
 }
@@ -3047,7 +3019,7 @@ input.savBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
+	padding: 2px 5px;
 	background-color: #FBD29B;
 	border: 1px solid;
 	border-color: #336666;
@@ -3060,7 +3032,7 @@ a.schBtn {
 	width: auto;
 	color: #333;
 	border: 1px solid #336666;
-	padding: 2px 5px;
+	padding: 2px 20px;
 	border-radius: 5px;
 	font-size: 13px;
 	font-weight: 600;
@@ -3088,7 +3060,7 @@ input.schBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	padding: 2px 10px;
+	padding: 2px 30px;
 	background-color: #CCCC99;
 	border: 1px solid #336666;
 	border-radius: 5px;
@@ -3128,7 +3100,6 @@ input.picBtn {
 	color: #666666;
 	font-size: 10pt;
 	font-weight: bold;
-	
 	background-color: #CCCC99;
 	border: 1px solid #336666;
 	border-radius: 5px;
@@ -3191,7 +3162,6 @@ pre {
 	border-top: 1px solid black;
 	padding: 0px 5px 0px 5px;
 	margin: 0px;
-	
 }
 #tabmenu a.active {
 	background: #FFFFFF;
@@ -3205,7 +3175,6 @@ pre {
 }
 #tabmenu a:visited {
 	color: #0000FF;
-	
 }
 #tabmenu a.active:hover {
 	background: #FFFFFF;
@@ -3213,25 +3182,18 @@ pre {
 	border-bottom: 3px solid #FFFFFF;
 }
 .style2 {
-	
 	font-size: small;
 }
 .style3 {
-	
 	font-size: xx-large;
 }
 .style4 {
 	font-size: x-large;
-	
 }
 .style5 {
 	font-size: large;
 }
-.style6 {
-	
-}
 .style8 {
-	
 	font-size: small;
 }
 /* \a0 is the iso8859-1 encoding for nbsp */
@@ -3389,11 +3351,16 @@ div.topBlock {
 .feedAtom h3 {
 	padding-left: 6.7em;
 }
-.changePW {width: 50em; margin: 0 auto;padding: 2em 0 3em 0;}
-.changePW li {margin-left: 1.5em;}
+.changePW {
+	width: 50em;
+	margin: 0 auto;
+	padding: 2em 0 3em 0;
+}
+.changePW li {
+	margin-left: 1.5em;
+}
 .updatedAtom {
 	position: absolute;
-	font-family: Arial, sans-serif;
 	z-index: 500;
 	margin-left: -10px;
 	margin-top: -5px;
@@ -3513,7 +3480,6 @@ header {
 	margin-left: 10px;
 }
 .loan_results {
-	
 	width: 100%;
 }
 .loan_results:nth-child(even) {
@@ -3624,7 +3590,6 @@ ul.loan_buttons li {
 	margin: 4px 5px 4px 0;
 	border: 2px solid #ccc;
 	padding: 3px 6px;
-	
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
 	border-radius: 5px 5px 5px 5px;
@@ -3730,7 +3695,6 @@ ul.lisc li {
 .eighty {
 	width: 80%;
 }
-/*.content_box table {width: 100%;}*/
 .mediaToggle {
 	font-size: 15px;
 	margin-bottom: 1em;
@@ -3744,8 +3708,6 @@ ul.lisc li {
 	width: 30em;
 	margin: 0 auto;
 	margin-bottom: 1em;
-}
-.content_box_pub td {
 }
 .content_box_pub select, .content_box_pub input {
 	width: 350px;
@@ -3857,7 +3819,6 @@ ul.pubLinks {
 	color: black;
 }
 /*  end header content -- excludes menu */
-
 .secHead {
 	background-color: lightgrey;
 	padding: 1px 5px;
@@ -4169,7 +4130,6 @@ table.navtabs {
 	width: 86%
 }
 .defaultCont {
-	/*float: left;*/
 	width: 100%;
 	background-color: #ffffff;
 	z-index: 1;
@@ -4547,6 +4507,7 @@ table.navtabs {
 	z-index: 1;
 }
 }
+
 @media only screen and (max-width: 800px) {
 #listloans dt {
 	width: 200px;
