--- a/includes/style.css
+++ b/includes/style.css
@@ -5,6 +5,7 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #FFFFFF;
+	margin: 0;
 }
 h3 {
 	display: block;
@@ -1522,11 +1523,6 @@ div.group {
 .removeRed {
 	border: 1px solid red;
 }
-body {
-	font-family: arial, sans-serif;
-	background-color: #FFFFFF;
-	margin: 0;
-}
 a:link {
 	text-decoration: none;
 	color: blue;
@@ -2423,6 +2419,7 @@ td.checkboxS {
 table.ssrch {
 	width: 100%;
 }
+table.ssrch tr {line-height: 1.5em;}
 td.lbl {
 	width: 15em;
 	text-align: right;
